# cli-dict

./: README.md  main.py  pyproject.toml  requirements.txt
tests/: test_cli.py
