[tool.poetry]
name = "cli-dict"
version = "0.1.0"
description = "Command line dictionary"
authors = ["Scribbles4U <dhickel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
requests = "^2.26.0"
urllib3 = "^1.26.7"
rich = "^13.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
